css/conditionals/voices-detail.css
@charset "UTF-8";
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-voices-cta a.cta, .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-name-voices-ct-background-rail a.cta {
  background: white;
}

.node-type-voices .field-name-social-buttons-top {
  border-top: 3px #231f20 solid;
}

.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-voices-cta a.cta, .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-right .field-name-voices-ct-background-rail a.cta {
  -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0, rgba(0, 0, 0, 0.1) 0 0 0 1px;
  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0, rgba(0, 0, 0, 0.1) 0 0 0 1px;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0, rgba(0, 0, 0, 0.1) 0 0 0 1px;
  margin: 1px;
}

.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body {
  overflow: hidden;
  *zoom: 1;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body p:first-of-type {
  font-size: 22px;
  line-height: 1.6;
}
@media (max-width: 37.5em) {
  .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body p:first-of-type {
    font-size: 18px;
  }
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body blockquote,
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body blockquote p {
  font-size: 18px !important;
  line-height: 1.4 !important;
  max-width: 560px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body h2, .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body h3, .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body h4 {
  line-height: 1.2;
  margin-bottom: 6px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body h2 {
  font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 24px;
  font-weight: bold;
  margin: 30px 0 10px 0;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body h3 {
  font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 20px;
  font-weight: bold;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body ol li, .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body ul li {
  margin-bottom: 12px;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body ol li:last-of-type, .node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body ul li:last-of-type {
  margin-bottom: 0;
}
.node-type-voices .ds-2col-stacked-fluid .content-wrapper .group-left .field-name-field-body ul li:before {
  color: #231f20;
}

.node-type-voices .field-name-social-buttons-top {
  border-bottom: 1px #231f20 solid;
  margin-bottom: 40px;
  margin-top: 20px;
  padding: 18px 0 9px;
  padding-left: 12px;
}

.node-type-voices .field-name-social-buttons-bottom {
  margin-top: 50px;
}
@media (max-width: 42.9375em) {
  .node-type-voices .field-name-social-buttons-bottom {
    display: block;
    margin-bottom: 0;
  }
}

.node-type-voices .short-url-wrapper {
  line-height: 3.2;
  margin-bottom: 36px;
}

.node-type-voices .short-url {
  background: white;
  border: 1px lightgray solid;
  color: #636f00;
  display: inline-block;
  line-height: 1.2;
  margin-left: 8px;
  padding: 8px;
}

/* Removing the background image that is applied to all pages in the msx or sloan directory */
.page-programs-msx.node-type-voices #content-wrapper,
.node-type-msx-fellows.node-type-voices #content-wrapper {
  background: none;
}
@media (min-width: 35.5625em) {
  .page-programs-msx.node-type-voices #content-wrapper,
  .node-type-msx-fellows.node-type-voices #content-wrapper {
    background: none;
  }
}

/* Container holding the image and the text */
.node-type-voices {
  /* Voices top quote */
  /* Voices col set up and adjustment */
}
@media (min-width: 16.875em) {
  .node-type-voices #main.column {
    padding: 0;
  }
}
.node-type-voices span.title-wrapper h1 {
  display: none;
}
.node-type-voices div#sidebar, .node-type-voices div#banner {
  display: none;
}
.node-type-voices #content {
  max-width: 100%;
}
.node-type-voices .group-header {
  color: #231f20;
  position: relative;
  text-align: center;
  /* Voices header image */
  /* Voices title box */
}
.node-type-voices .group-header .field-name-field-image-key-image img {
  max-height: 600px;
  width: 100%;
}
@media (max-width: 35.5em) {
  .node-type-voices .group-header .field-name-field-image-key-image img {
    display: none;
  }
}
@media (min-width: 37.5em) and (max-width: 74.9375em) {
  .node-type-voices .group-header .field-name-field-image-key-image img {
    display: block;
    max-height: 100%;
    width: 100%;
  }
}
.node-type-voices .group-header .mobile-profile-image {
  display: none;
}
@media (max-width: 35.5em) {
  .node-type-voices .group-header .mobile-profile-image {
    display: block;
  }
}
@media (min-width: 37.5em) and (max-width: 74.9375em) {
  .node-type-voices .group-header .mobile-profile-image {
    display: none;
  }
}
.node-type-voices .group-header fieldset.group-voices-group {
  border: none;
  color: white;
  height: 380px;
  margin-left: 15%;
  opacity: 0.9;
  padding: 0 45px;
  position: absolute;
  text-align: left;
  top: 50px;
  width: 430px;
  z-index: 5;
}
@media (max-width: 35.5em) {
  .node-type-voices .group-header fieldset.group-voices-group {
    background-color: transparent;
    color: #231f20;
    height: auto;
    position: static;
    padding: 0;
    margin: 0 18px;
    width: 100%;
  }
}
/* ... */

